2019.1/README.md
# IF1001 - Programação 3 (Programação para Dispositivos Móveis com Android)

## Sistemas de Informação, [Centro de Informática](http://www.cin.ufpe.br), ([UFPE](http://www.ufpe.br))

### Instrutores

* **Professor** 
  * Leopoldo Motta Teixeira ([@leopoldomt](https://github.com/leopoldomt) --- lmt@cin)
  
### Horário e Local de Aulas

* Segunda (18h50-20h30), grad 3
* Quarta (17h-18h40), grad 3

### Ementa

Este curso apresenta uma introdução ao desenvolvimento de aplicações para dispositivos móveis, usando a plataforma Android como estudo de caso.

### Bibliografia Sugerida

Não há livro texto obrigatório. Entretanto, a seguir estão alguns livros, sites, e newsletters que podem ser recomendados:

- [The Busy Coder’s Guide to Android Development](https://commonsware.com/Android/)
- [Android Programming: The Big Nerd Ranch Guide](https://www.bignerdranch.com/books/android-programming/)
- [Kotlin for Android Developers](https://antonioleiva.com/kotlin-android-developers-book/)
- [Android Weekly](http://androidweekly.net)
- [Android Reference](http://developer.android.com)
- [Android Developers Blog](http://android-developers.blogspot.com)

### Objetivos

- Motivar, apresentar, exercitar e consolidar o desenvolvimento de aplicações para dispositivos móveis, utilizando a plataforma Android como estudo de caso
- Estudar e desenvolver vários aplicativos simples no decorrer da disciplina para exercitar diferentes conceitos da plataforma
- Desenvolver um aplicativo como projeto da disciplina e usá-lo como estudo de caso;
- Compreender organização, padrões e mecanismos de programação da plataforma Android e estar apto a usá-los efetivamente para desenvolver sua própria aplicação;
- Usar ferramentas de desenvolvimento para criar, entender, depurar e otimizar aplicações Android;
- Compreender as características distintas e restrições que existem em dispositivos móveis e lidar com isto no contexto de aplicações Android;
- Estar apto a encontrar fontes adicionais de informação para entender e resolver problemas relacionados com desenvolvimento Android.

### Metodologia

Na disciplina, combinaremos utilizada uma mistura de aulas tradicionais com aulas práticas e tarefas de programação para casa. 

### Recursos

- [Slack](http://if1001.slack.com)

#### Ferramentas

* [Android Studio](https://developer.android.com/studio/index.html)

### Avaliação

* Projeto (sozinho ou em dupla)
  * A nota do projeto compreende não apenas a qualidade do resultado final, mas também acompanhamentos, respeito a prazos e datas de entrega, etc. 

* Exercícios diversos (complementam nota)
  * Criação e avaliação de pequenos apps
  * Uso de ferramentas de análise de apps
  * Criação de Tutoriais de bibliotecas
      
- Observações:
  - Entrega fora do prazo: **redutor de 1 ponto por dia de atraso**. 
  - Atraso máximo: **1 (uma) semana**. Após esse prazo, será dada nota **zero** para a respectiva atividade de avaliação.
  - Trabalhos **“CTRL-C + CTRL-V”** terão nota **zero** (vale tanto para cópia de colegas, como para trabalhos copiados da internet).

### Plano de Ensino

**Atenção!** 
*Este plano de ensino está sujeito a alterações durante o semestre, visite frequentemente a página para obter a versão mais atualizada, ou acompanhe os updates no repositório.*

| # | Data | Assunto | Recursos |
|:---:|:----:|:----------------------|:--------:|
| 01 | 18.02.19 (seg) | Apresentação e conceitos fundamentais de desenvolvimento de aplicações móveis | --- |
| 02 | 20.02.19 (qua) | Kotlin Basics | --- |
| 03 | 25.02.19 (seg) | Kotlin Basics | --- |
| 04 | 27.02.19 (qua) | Kotlin Basics & Conceitos Básicos de Projetos Android | --- |
| -- | 04.03.19 (qua) | *CARNAVAL* | --- |
| -- | 06.03.19 (qua) | *CARNAVAL* | --- |
| 05 | 11.03.19 (seg) | Projetando telas e interagindo com elementos de UI | --- |
| 06 | 13.03.19 (qua) | AdapterView e widgets complexos | --- |
| 07 | 18.03.19 (seg) | RecyclerView | --- |
| 08 | 20.03.19 (qua) | Activities e Ciclo de Vida | --- |
| 09 | 25.03.19 (seg) | Interação entre telas | --- |
| 10 | 27.03.19 (qua) | Intents  | --- |
| 11 | 01.04.19 (seg) | Threads, AsyncTasks  | --- |
| 12 | 03.04.19 (qua) | Permissions, Data Management  | --- |
| 13 | 08.04.19 (seg) | Data Management | --- |
| 14 | 10.04.19 (qua) | SQLite & Room | --- |
| 15 | 15.04.19 (seg) | Services | --- |
| 16 | 17.04.19 (qua) | Broadcast Receivers | [Especificação do Projeto](Projeto-Especificacao.md) |
| 17 | 22.04.19 (seg) | System Services | --- |
| 18 | 24.04.19 (qua) | System Services | --- |
| 19 | 29.04.19 (seg) | Finalizar Especificação do Projeto | *ENTREGA - Especificação do Projeto* |
| -- | 01.05.19 (qua) | *DIA DO TRABALHO* | --- |
| 20 | 06.05.19 (seg) | Exercício | --- |
| 21 | 08.05.19 (qua) | Exercício | --- |
| 22 | 13.05.19 (seg) | Content Provider Theory & Implementation | --- |
| 23 | 15.05.19 (qua) | Paralisação | --- |
| 24 | 20.05.19 (seg) | Acompanhamento de Projeto | --- |
| 25 | 22.05.19 (qua) | Acompanhamento de Projeto | --- |
| 26 | 27.05.19 (seg) | Acompanhamento de Projeto | --- |
| 27 | 29.05.19 (qua) | Acompanhamento de Projeto | --- |
| 28 | 03.06.19 (seg) | Acompanhamento de Projeto | --- |
| 29 | 05.06.19 (qua) | Acompanhamento de Projeto | --- |
| 30 | 10.06.19 (seg) | Acompanhamento de Projeto | --- |
| 31 | 12.06.19 (qua) | Acompanhamento de Projeto | --- |
| 32 | 17.06.19 (seg) | Acompanhamento de Projeto | --- |
| 33 | 19.06.19 (qua) | Acompanhamento de Projeto | --- |
| -- | 24.06.19 (seg) | *São João* | --- |
| 35 | 01.07.19 (seg) | *DEADLINE PARA ENTREGA DE PROJETO* | --- |
