2020.1/README.md
# IF1001 - Programação 3 (Programação para Dispositivos Móveis com Android)

## Sistemas de Informação, [Centro de Informática](http://www.cin.ufpe.br), ([UFPE](http://www.ufpe.br))

### Instrutores

* **Professor** 
  * Leopoldo Motta Teixeira ([@leopoldomt](https://github.com/leopoldomt) --- lmt@cin)
  
### Horário e Local de Aulas

* Segunda (18h50-20h30), grad 3
* Quarta (17h-18h40), grad 3

### Ementa

Este curso apresenta uma introdução ao desenvolvimento de aplicações para dispositivos móveis, usando a plataforma Android como estudo de caso.

### Bibliografia Sugerida

Não há livro texto obrigatório. Entretanto, a seguir estão alguns livros, sites, e newsletters que podem ser recomendados:

- [The Busy Coder’s Guide to Android Development - Mark Murphy](https://commonsware.com/Android/)
- [Android Programming: The Big Nerd Ranch Guide - Bill Phillips, Chris Stewart, Kristin Marsicano](https://www.bignerdranch.com/books/android-programming/)
- [Kotlin for Android Developers - Antonio Leiva](https://antonioleiva.com/kotlin-android-developers-book/)
- [Kotlin in Action - Dmitry Jemerov, Svetlana Isakova](https://www.manning.com/books/kotlin-in-action)
- [Android Weekly](http://androidweekly.net)
- [Android Reference](http://developer.android.com)
- [Android Developers Blog](http://android-developers.blogspot.com)

### Objetivos

- Motivar, apresentar, exercitar e consolidar o desenvolvimento de aplicações para dispositivos móveis, utilizando a plataforma Android como estudo de caso
- Estudar e desenvolver vários aplicativos simples no decorrer da disciplina para exercitar diferentes conceitos da plataforma
- Desenvolver um aplicativo como projeto da disciplina e usá-lo como estudo de caso;
- Compreender organização, padrões e mecanismos de programação da plataforma Android e estar apto a usá-los efetivamente para desenvolver sua própria aplicação;
- Usar ferramentas de desenvolvimento para criar, entender, depurar e otimizar aplicações Android;
- Compreender as características distintas e restrições que existem em dispositivos móveis e lidar com isto no contexto de aplicações Android;
- Estar apto a encontrar fontes adicionais de informação para entender e resolver problemas relacionados com desenvolvimento Android.

### Metodologia

Na disciplina, combinaremos utilizada uma mistura de aulas tradicionais com aulas práticas e tarefas de programação para casa. 

### Recursos

- [Slack](http://if1001.slack.com)

#### Ferramentas

* [Android Studio](https://developer.android.com/studio/index.html)

### Avaliação

* Exercícios diversos (complementam a nota)
  * Criação de pequenos apps durante a disciplina
* Seminários em sala de aula (30%)
  * Apresentação e discussão de temas relacionados a desenvolvimento móvel
* Projeto (70%)
  * [Lista de Equipes](#)
  * A nota do projeto compreende não apenas a qualidade do resultado final, mas também acompanhamentos, respeito a prazos e datas de entrega, etc. 
      
- Observações:
  - Entrega fora do prazo: **redutor de 1 ponto por dia de atraso**. 
  - Atraso máximo: **1 (uma) semana**. Após esse prazo, será dada nota **zero** para a respectiva atividade de avaliação.
  - Trabalhos **“CTRL-C + CTRL-V”** terão nota **zero** (vale tanto para cópia de colegas, como para trabalhos copiados da internet).

### Plano de Ensino

**Atenção!** 
*Este plano de ensino está sujeito a alterações durante o semestre, visite frequentemente a página para obter a versão mais atualizada, ou acompanhe os updates no repositório.*

| # | Data | Assunto | Recursos |
|:---:|:----:|:----------------------|:--------:|
| -- | 02.03.20 (seg) | *Licença Paternidade* | --- |
| -- | 04.03.20 (qua) | *Licença Paternidade* | --- |
| 01 | 09.03.20 (seg) | [Apresentação e conceitos fundamentais de desenvolvimento de aplicações móveis](https://drive.google.com/open?id=1yb0dIzLJOhRqIz-kg-AiZs0R7rqMLhGc) | --- |
| 02 | 11.03.20 (qua) | Android & Kotlin Basics - Widgets e Interação | --- |
| 03 | 16.03.20 (seg) | Layout Managers e Widgets UI | --- |
| 04 | 18.03.20 (qua) | RecyclerView | --- |
| 05 | 23.03.20 (seg) | Configurations, ViewModel, Processos | --- |
| 06 | 25.03.20 (qua) | DataBinding, App Bar, Intents | --- |
| 07 | 30.03.20 (seg) | Threads & LiveData | --- |
| -- | 31.03.20 (ter) | [Deadline para Entrega da Especificação do Projeto](Projeto-Especificacao.md) | --- |
| 08 | 01.04.20 (qua) | Princípios de UI Design para Apps | --- |
| 09 | 06.04.20 (seg) | Estilos Arquiteturais & Permissions | --- |
| 10 | 08.04.20 (qua) | Preferences & Room | --- |
| 11 | 13.04.20 (seg) | WorkManager  | --- |
| 12 | 15.04.20 (qua) | Services | --- |
| 13 | 20.04.20 (seg) | Exercício | --- |
| 14 | 22.04.20 (qua) | System Services & BroadcastReceivers | --- |
| 15 | 27.04.20 (seg) | Testes | --- |
| 16 | 29.04.20 (qua) | Testes | --- |
| 17 | 04.05.20 (seg) | **Seminários:** Processamento e Desempenho | --- |
| 18 | 06.05.20 (qua) | **Seminários:** Memória | --- |
| 19 | 11.05.20 (seg) | **Seminários:** Energia | --- |
| 20 | 13.05.20 (qua) | **Seminários:** Consumo de Rede | --- |
| 21 | 18.05.20 (seg) | **Seminários:** Privacidade & Segurança | --- |
| 22 | 20.05.20 (qua) | **Seminários:** Testes | --- |
| 23 | 25.05.20 (seg) | **Seminários:** Suporte ferramental, abordagens alternativas de programação | --- |
| 24 | 27.05.20 (qua) | **Seminários:** Cross-platform development | --- |
| 25 | 01.06.20 (seg) | Acompanhamento de Projeto | --- |
| 26 | 03.06.20 (qua) | Acompanhamento de Projeto | --- |
| 27 | 08.06.20 (seg) | Acompanhamento de Projeto | --- |
| 28 | 10.06.20 (qua) | Acompanhamento de Projeto | --- |
| 29 | 15.06.20 (seg) | Acompanhamento de Projeto | --- |
| 30 | 17.06.20 (qua) | Acompanhamento de Projeto | --- |
| 31 | 22.06.20 (seg) | Acompanhamento de Projeto | --- |
| -- | 24.06.20 (qua) | *São João* | --- |
| 32 | 29.06.20 (seg) | Acompanhamento de Projeto | --- |
| 33 | 01.07.20 (qua) | *DEADLINE PARA ENTREGA DE PROJETO* | --- |
